<!--
  ~ Copyright 2016 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">LoFo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="server_client_id">1014292022054-9ugm050vlg0v11st2csrobllef3un82m.apps.googleusercontent.com</string>
    <string name="server_widget_url">http://www.google.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_feeds">FeedsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id">1759544837616905</string>
    <string name="fb_login_protocol_scheme">fb1759544837616905</string>
    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="server_client_id_web">1014292022054-9ugm050vlg0v11st2csrobllef3un82m.apps.googleusercontent.com</string>
    <string name="project_id">lofo-59afa</string>
    <string name="title_activity_welcome"> LoFo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="people">People</string>
    <string name="vehicle">Vehicles</string>
    <string name="ornaments">Ornaments</string>
    <string name="goods">Goods</string>
    <string name="electronics">Electronics</string>
    <string name="other">Other</string>
        <string-array name="category">
            <item>@string/people</item>
            <item>@string/vehicle</item>
            <item>@string/ornaments</item>
            <item>@string/goods</item>
            <item>@string/electronics</item>
            <item>@string/other</item>
        </string-array>
    <string name="motto"> The Easiest way to find your stuffs </string>
    <string name="skip">skip sign in</string>
    <string name="app_welcome_name">Welcome to LoFo</string>
    <string name="sign_in_button_text">sign in</string>
    <string name="sign_out_button_text">sign out</string>
    <string name="missing">Check Missing </string>
    <string name="add_found"> Add Found Items </string>
    <string name="drawer_profile_title">Profile</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="drawer_your_feed_title">Your Feed</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="invite_friends_button_text">Invite your friends</string>
    <string name="my_posts_button_text">My posts</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="follow_user_error">Unable to follow user.</string>
    <string name="picture_chooser_title">Select or take picture to post</string>
    <string name="new_comment_hint">Enter new comment</string>
    <string name="new_post_location_placeholder">Getting location…</string>
    <string name="user_info_no_name">Unknown user</string>
    <string name="error_required_field">Required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_upload_task_create">Couldn\'t create upload task.</string>
    <string name="default_progress_message">Please wait…</string>
    <string name="profile_progress_message">Signing in…</string>
    <string name="post_upload_progress_message">Uploading…</string>
    <string name="user_logged_out_error">You must be logged in to do that.</string>
    <string name="error_user_not_signed_in">Error user not signed in.</string>
</resources>
