<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".WelcomeActivity">

    <ImageView
        android:layout_width="100dp"
        android:id="@+id/logo"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/launcher"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:id="@+id/welcome_appname"
        android:text="@string/app_name"
        style="@style/WelcomeScreenHeaderTextStyle"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:id="@+id/welcome_moto"
        android:text="@string/motto"
        style="@style/WelcomeScreenMottoTextStyle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.common.SignInButton
    android:id="@+id/sign_in_button"
    android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
    android:text="@string/sign_in_button_text"
        android:layout_below="@+id/welcome_moto"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:layout_height="60dp"
        android:layout_below="@+id/sign_in_button"
        android:layout_alignStart="@+id/sign_in_button" />

    <TextView
        android:id="@+id/explore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/skip"
        style="@style/WelcomeScreenMottoTextStyle"
        android:layout_marginBottom="18dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/logo" />
</RelativeLayout>