<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Welcome">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/repeating_texture2"
            app:popupTheme="@style/AppTheme.Welcome"
            />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ProfileActivity"
        android:background="@drawable/repeating_texture"
        tools:showIn="@layout/activity_profile">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_user_photo"
                android:layout_width="@dimen/profile_user_photo_size"
                android:layout_height="@dimen/profile_user_photo_size"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:id="@+id/profile_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Anonymous"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                style="@style/TextAppearance.AppCompat.Title"/>
            <Button
                android:id="@+id/show_feeds_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:bottomRightRadius="10dp"
                android:bottomLeftRadius="10dp"
                android:topLeftRadius="10dp"
                android:topRightRadius="10dp"
                android:textColor="@android:color/white"
                android:text="@string/missing"
                android:elevation="4dp"
                android:background="@drawable/repeating_texture2"/>
            <Button
                android:layout_width="200dp"
                android:id="@+id/add_found"
                android:layout_height="50dp"
                android:bottomRightRadius="10dp"
                android:bottomLeftRadius="10dp"
                android:topLeftRadius="10dp"
                android:topRightRadius="10dp"
                android:textColor="@android:color/white"
                android:text="@string/add_found"
                android:elevation="4dp"
                android:background="@drawable/repeating_texture2"/>

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:bottomRightRadius="10dp"
                android:bottomLeftRadius="10dp"
                android:topLeftRadius="10dp"
                android:topRightRadius="10dp"
                android:textColor="@android:color/white"
                android:text="@string/sign_out_button_text"
                android:elevation="4dp"
                android:background="@drawable/repeating_texture2"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
<android.support.design.widget.NavigationView
android:id="@+id/nav_view"
android:layout_width="@dimen/nav_header_width"
android:layout_height="match_parent"
android:layout_gravity="start"
android:fitsSystemWindows="true"
app:headerLayout="@layout/nav_header_main"
app:menu="@menu/main_drawer" />

    </android.support.v4.widget.DrawerLayout>
